<resources>

    <!-- <string name=""></string> -->
    <string name="add_task">+ Add Task</string>

    <!-- Global -->
    <string name="go_back_label">Go Back</string>
    <string name="ungrouped_header" translatable="false">------</string>
    <string name="favorites_header">------ Favorites</string>
    <string name="new_group_header">------ New Group</string>
    <string name="new_group_header_count">------ New Group %d</string>
    <string name="no_clock_app_found_label">No clock app found</string>
    <string name="unable_open_settings_toast">Unable to open launcher settings</string>
    <string name="unable_open_wallpaper_app_toast">No wallpaper app available</string>
    <string name="unable_launch_app_toast">Unable to launch app</string>

    <!-- Main :: Temperature labels -->
    <string name="temp_warm">Warm</string>
    <string name="temp_hot">Hot</string>
    <string name="temp_critical">Critical</string>

    <!-- Main :: Battery status -->
    <string name="status_charging">Charging</string>
    <string name="status_discharging">Discharging</string>
    <string name="status_full">Full</string>
    <string name="status_not_charging">Not charging</string>
    <string name="status_unknown">Unknown</string>

    <!-- Main :: Charging types -->
    <string name="charge_usb">USB</string>
    <string name="charge_ac">AC</string>
    <string name="charge_wireless">Wireless</string>

    <!-- Main :: Formatting -->
    <string name="battery_status_power">%1$s %2$dx</string>
    <string name="battery_status_power_type">%1$s (%2$s) %3$dx</string>
    <string name="unit_celsius">C</string>
    <string name="unit_fahrenheit">F</string>
    <string name="battery_temp">%1$d°%2$s</string>
    <string name="battery_temp_labeled">%1$d°%2$s (%3$s)</string>

    <!-- APP / About -->
    <string name="app_name" translatable="false">Adiskide</string>
    <string name="app_description">A lightweight, distraction-free Android launcher that’s privacy-first and entirely on-device, designed for focus and simplicity.</string>
    <string name="icon_block_desc">No Background Tasks</string>
    <string name="icon_ads_desc">No Ads</string>
    <string name="icon_location_desc">No Trackers</string>
    <string name="icon_offline_desc">Works Offline</string>
    <string name="main_project_url" translatable="false">codeberg.org/pombo/adiskide</string>
    <string name="app_header">App</string>
    <string name="icons_header">Icons</string>
    <string name="fonts_header">Fonts</string>

    <string name="gpl3_desc" translatable="false">GPL 3.0</string>
    <string name="ofl_1_1_desc" translatable="false">OFL 1.1</string>
    <string name="apache_2_desc" translatable="false">Apache 2.0</string>
    <string name="cc_4_desc" translatable="false">CC 4.0</string>

    <string name="hackernoon_url" translatable="false">github.com/hackernoon/pixel-icon-library</string>
    <string name="app_creator" translatable="false">Miguel Rivas</string>
    <string name="hackernoon_creator" translatable="false">HackerNoon</string>
    <string name="hackernoon_product" translatable="false">Pixel Icon Library</string>
    <string name="jersey_creator" translatable="false">Sarah Cadigan-Fried</string>
    <string name="jersey_url" translatable="false">github.com/scfried/soft-type-jersey</string>
    <string name="montserrat_creator" translatable="false">Julieta Ulanovsky, Sol Matas, Juan Pablo del Peral, Jacques Le Bailly</string>
    <string name="montserrat_url" translatable="false">github.com/JulietaUla/Montserrat</string>
    <string name="quicksand_creator" translatable="false">Andrew Paglinawan</string>
    <string name="quicksand_url" translatable="false">github.com/andrew-paglinawan/QuicksandFamily</string>
    <string name="robotoslab_creator" translatable="false">Christian Robertson</string>
    <string name="robotoslab_url" translatable="false">github.com/googlefonts/robotoslab</string>


    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="others_header">Others</string>
    <string name="clock_header">Clock</string>
    <string name="date_header">Date and Battery</string>
    <string name="groups_header">Groups</string>
    <string name="set_default">Set Launcher as default</string>
    <string name="refresh_launcher">Refresh launcher</string>
    <string name="change_wallpaper">Change OS wallpaper</string>
    <string name="about_main_project_label">About Adiskide</string>
    <string name="edit_apps">Edit apps</string>
    <string name="show_battery">Show battery</string>
    <string name="show_search_label">Show search button</string>
    <string name="show_date">Show date</string>
    <string name="show_clock">Show clock</string>
    <string name="show_year_day">Show day of the year</string>
    <string name="add_group_label">+ Add New Group</string>
    <string name="clock_none">Hide clock</string>
    <string name="system_label">System default</string>
    <string name="clock_24">24-hour</string>
    <string name="clock_12">12-hour (AM/PM)</string>
    <string name="open_app_settings_label">Open app settings</string>
    <string name="show_battery_temperature">Show battery temperature</string>
    <string name="show_battery_charge_status">Show battery charge status</string>
    <string name="font_jersey_label" translatable="false">Jersey 25</string>
    <string name="font_quicksand_label" translatable="false">Quicksand</string>
    <string name="font_montserrat_label" translatable="false">Montserrat</string>
    <string name="font_robotoslab_label" translatable="false">Roboto Slab</string>
    <string name="font_style_header">Font Style</string>


    <!-- Popup :: Context Menu App -->
    <string name="rename_app">Rename app</string>
    <string name="add_to_favorites">Add to group...</string>
    <string name="open_settings">App settings...</string>

    <!-- Dialog -->
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>

    <!-- Dialog :: Rename App -->
    <string name="select_group">Select Group</string>

    <!-- Dialog :: Search -->
    <string name="search_apps_header">Search apps</string>

    <!-- Dialog :: Delete Group -->
    <string name="delete_group_title">Are you sure you want to delete this group?\nThis action cannot be undone.</string>
    <string name="delete_group">Delete group</string>

</resources>