<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:textSize="18sp"
        android:textColor="@color/foreground_color"
        android:text="@string/delete_group_title"
        android:gravity="center"
        android:textStyle="bold" />

    <com.rama.adiskide.widgets.WdButton
        android:id="@+id/yes_button"
        android:layout_width="match_parent"
        android:layout_marginBottom="8sp"
        android:layout_height="wrap_content"
        android:background="@color/danger"
        android:text="@string/delete_group" />

    <com.rama.adiskide.widgets.WdButton
        android:id="@+id/no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_primary_color"
        android:text="@string/cancel" />
</LinearLayout>