<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:orientation="vertical"
    android:background="@color/bg_primary"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/modal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:textSize="32sp"
        android:textColor="@color/foreground"
        android:text="Add new group"
        android:gravity="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="16sp"
        android:padding="16sp"
        android:text="Group name"
        android:layout_marginBottom="8sp"
        android:background="@color/input" />

    <com.rama.txori.widgets.WdButton
        android:id="@+id/yes_button"
        android:layout_width="match_parent"
        android:layout_marginBottom="8sp"
        android:layout_height="wrap_content"
        android:background="@color/button_secondary_color"
        android:text="@string/save" />

    <com.rama.txori.widgets.WdButton
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_marginBottom="8sp"
        android:layout_height="wrap_content"
        android:background="@color/danger"
        android:text="@string/delete_group" />

    <com.rama.txori.widgets.WdButton
        android:id="@+id/no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_primary_color"
        android:text="@string/cancel" />
</LinearLayout>